perfsonar-archive (5.0.7-1) perfsonar-5.0; urgency=low

  * New upstream version.

 -- perfSONAR developers <debian@perfsonar.net>  Sat, 09 Dec 2023 08:53:51 -0500

perfsonar-archive (5.0.6-1) perfsonar-5.0; urgency=low

  * New upstream version.

 -- perfSONAR developers <debian@perfsonar.net>  Fri, 10 Nov 2023 15:47:30 -0500

perfsonar-archive (5.0.5-1) perfsonar-5.0; urgency=low

  * New upstream version.

 -- perfSONAR developers <debian@perfsonar.net>  Wed, 27 Sep 2023 10:32:57 -0400

perfsonar-archive (5.0.4-1) perfsonar-5.0; urgency=low

  * New upstream version.

 -- perfSONAR developers <debian@perfsonar.net>  Mon, 24 Jul 2023 10:41:40 -0400

perfsonar-archive (5.0.3-1) perfsonar-5.0; urgency=low

  * New upstream version.

 -- perfSONAR developers <debian@perfsonar.net>  Fri, 16 Jun 2023 12:45:52 -0400

perfsonar-archive (5.0.2-2) perfsonar-5.0; urgency=low

  * Adding lsb-release to dependencies.

 -- Lætitia Delvaux <adelvaux@man.poznan.pl>  Tue, 06 Jun 2023 13:20:48 +0000 

perfsonar-archive (5.0.2-1) perfsonar-5.0; urgency=low

  * New upstream version.

 -- perfSONAR developers <debian@perfsonar.net>  Fri, 02 Jun 2023 09:18:13 -0700

perfsonar-archive (5.0.1-1) perfsonar-5.0; urgency=low

  * New upstream version.

 -- perfSONAR developers <debian@perfsonar.net>  Wed, 19 Apr 2023 15:52:21 -0400

perfsonar-archive (5.0.0-1) perfsonar-5.0; urgency=low

  * Initial release. 

 -- perfSONAR developers <debian@perfsonar.net>  Thu, 13 Apr 2023 19:19:42 -0400