@@ -1,0 +1,57 @@
+name: oneshot-build
+on: push
+jobs:
+  setup-containers:
+    strategy:
+      #fail-fast: true
+      matrix:
+          os: [  'el7', 'el8', 'el9' ]
+      
+    runs-on: ubuntu-latest
+   
+    container: 
+      ##image: ghcr.io/perfsonar/unibuild/${{ matrix.os }}:latest
+      options: --privileged
+      image: ghcr.io/perfsonar/docker-oneshot-builder/${{ matrix.os }}:latest
+      volumes:
+      - ${{ github.workspace }}:/build
+        
+    steps:
+       - name: Check out Repo
+         uses: actions/checkout@v3
+ 
+       - name: install dependancies repo
+         if: ${{ matrix.os  == 'el7' }}
+         run: yum -y install -y http://linux.mirrors.es.net/perfsonar/${{ matrix.os }}/x86_64/5/packages/perfsonar-repo-0.11-1.noarch.rpm
+
+       - name: install deps El8
+         if: ${{ matrix.os  == 'el8' }}
+         run: dnf -y install -y http://linux.mirrors.es.net/perfsonar/${{ matrix.os }}/x86_64/5/packages/perfsonar-repo-0.11-1.noarch.rpm
+       - name: install deps EL9
+         if: ${{ matrix.os  == 'el9' }}
+         run: dnf -y install -y http://linux.mirrors.es.net/perfsonar/${{ matrix.os }}/x86_64/5/packages/perfsonar-repo-0.11-1.noarch.rpm
+       - name: install deps d10
+         if: ${{ matrix.os  == 'd10' }} 
+         run: export DEBIAN_FRONTEND=noninteractive && curl -s http://downloads.perfsonar.net/debian/perfsonar-minor-snapshot.gpg.key | apt-key add - && curl -s -o /etc/apt/sources.list.d/perfsonar-minor-snapshot.list http://downloads.perfsonar.net/debian/perfsonar-minor-snapshot.list && apt-get update && echo && echo 
+       - name: install deps d12
+         if: ${{ matrix.os  == 'd12' }} 
+         run: export DEBIAN_FRONTEND=noninteractive && curl -s http://downloads.perfsonar.net/debian/perfsonar-minor-snapshot.gpg.key | apt-key add - && curl -s -o /etc/apt/sources.list.d/perfsonar-minor-snapshot.list http://downloads.perfsonar.net/debian/perfsonar-minor-snapshot.list && apt-get update && echo && echo 
+       - name: install deps u18
+         if: ${{ matrix.os  == 'u18' }} 
+         run: export DEBIAN_FRONTEND=noninteractive && curl -s http://downloads.perfsonar.net/debian/perfsonar-minor-snapshot.gpg.key | apt-key add - && curl -s -o /etc/apt/sources.list.d/perfsonar-minor-snapshot.list http://downloads.perfsonar.net/debian/perfsonar-minor-snapshot.list && apt-get update && echo && echo 
+       - name: install deps u20
+         if: ${{ matrix.os  == 'u20' }} 
+         run: export DEBIAN_FRONTEND=noninteractive && curl -s http://downloads.perfsonar.net/debian/perfsonar-minor-snapshot.gpg.key | apt-key add - && curl -s -o /etc/apt/sources.list.d/perfsonar-minor-snapshot.list http://downloads.perfsonar.net/debian/perfsonar-minor-snapshot.list && apt-get update && echo && echo 
+       
+       
+       - name: make
+         run: make
+  
+       - name: tar files
+         run: tar -cvf archive.tar ./unibuild-repo
+  
+       - name: Archive repo
+         uses: actions/upload-artifact@v3
+         with:
+           name: perfsonar-archive-${{ matrix.os }}.tar
+           path: archive.tar
